--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -612,7 +612,7 @@
                             "status": "Stable",
                             "author": "@armbian",
                             "condition": "module_sonarr status"
-                        },                        
+                        },
                         {
                             "id": "SON003",
                             "description": "Sonarr purge with data folder",
@@ -1264,7 +1264,6 @@
                             "author": "@igorpecovnik",
                             "condition": "module_netdata status"
                         }
-
                     ]
                 },
                 {
@@ -1273,47 +1272,13 @@
                     "sub": [
                         {
                             "id": "MAN001",
-                            "description": "Install Cockpit web-based management tool",
-                            "about": "This operation will install Cockpit.\ncockpit cockpit-ws cockpit-system cockpit-storaged",
+                            "description": "Cockpit web-based management tool",
                             "command": [
-                                "see_current_apt update",
-                                "pkg_install cockpit cockpit-ws cockpit-system cockpit-storaged "
+                                "see_menu module_cockpit"
                             ],
                             "status": "Stable",
-                            "author": "@schwar3kat",
-                            "condition": "! pkg_installed cockpit"
-                        },
-                        {
-                            "id": "MAN002",
-                            "description": "Purge Cockpit web-based management tool",
-                            "about": "This operation will purge Cockpit.",
-                            "command": [
-                                "pkg_remove cockpit"
-                            ],
-                            "status": "Stable",
-                            "author": "@schwar3kat",
-                            "condition": "pkg_installed cockpit"
-                        },
-                        {
-                            "id": "MAN003",
-                            "description": "Start Cockpit Service",
-                            "command": [
-                                "sudo systemctl enable --now cockpit.socket | show_infobox "
-                            ],
-                            "status": "Stable",
-                            "author": "@schwar3kat",
-                            "condition": "pkg_installed cockpit && ! systemctl is-enabled cockpit.socket > /dev/null 2>&1"
-                        },
-                        {
-                            "id": "MAN004",
-                            "description": "Stop Cockpit Service",
-                            "command": [
-                                "systemctl stop cockpit cockpit.socket",
-                                "systemctl disable cockpit.socket | show_infobox "
-                            ],
-                            "status": "Stable",
-                            "author": "@schwar3kat",
-                            "condition": "pkg_installed cockpit && systemctl is-enabled cockpit.socket > /dev/null 2>&1"
+                            "author": "@Tearran",
+                            "condition": ""
                         },
                         {
                             "id": "MAN005",
@@ -1357,7 +1322,7 @@
                             "id": "NET003",
                             "description": "iperf3 bandwidth measuring tool",
                             "prompt": "This operation will install iperf3.",
-                            "command": [                                
+                            "command": [
                                 "pkg_install iperf3"
                             ],
                             "status": "Stable",
