--- a/tests/MAN002.conf
+++ b/tests/MAN002.conf
@@ -1,4 +1,4 @@
-ENABLED=true
+ENABLED=false
 PREINSTALL="armbian-config --api module_cockpit purge" in order to satisfy test case
 CONDITION="[ ! -f /usr/bin/cockpit-bridge ]"
 RELEASE="bookworm:jammy:noble" run on specific or leave empty to run on all
