Software title: Navidrome Music Server and Streamer compatible with Subsonic/Airsonic

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -170,6 +170,42 @@
                     ]
                 },
                 {
+                    "id": "Music",
+                    "description": "Music servers and streamers",
+                    "sub": [
+                        {
+                            "id": "NAV001",
+                            "description": "Navidrome music server and streamer compatible with Subsonic/Airsonic",
+                            "command": [
+                                "module_navidrome install"
+                            ],
+                            "status": "Stable",
+                            "author": "@armbian",
+                            "condition": "! module_navidrome status"
+                        },
+                        {
+                            "id": "NAV002",
+                            "description": "Navidrome remove",
+                            "command": [
+                                "module_navidrome install"
+                            ],
+                            "status": "Stable",
+                            "author": "@armbian",
+                            "condition": "module_navidrome status"
+                        },
+                        {
+                            "id": "NAV003",
+                            "description": "Navidrome purge with data folder",
+                            "command": [
+                                "module_navidrome purge"
+                            ],
+                            "status": "Stable",
+                            "author": "@armbian",
+                            "condition": "module_navidrome status"
+                        }
+                    ]
+                },
+                {
                     "id": "Desktops",
                     "description": "Desktop Environments",
                     "status": "Disabled",
