Switch unit test to dedicated Armbian VM images

--- a/tests/CON005.conf
+++ b/tests/CON005.conf
@@ -1,3 +1,8 @@
 ENABLED=true
-RELEASE="bookworm:jammy:noble"
-CONDITION="test=\$(docker container ls -a |  grep portainer )"
+RELEASE="bookworm:noble"
+
+function testcase {
+	./bin/armbian-config --api module_portainer remove
+	./bin/armbian-config --api module_portainer status
+	echo $?
+}
