--- a/tests/HAB001.conf
+++ b/tests/HAB001.conf
@@ -1,2 +1,7 @@
 ENABLED=true
-CONDITION="[ -f /lib/systemd/system/openhab.service ]"
+RELEASE="bookworm"
+
+function testcase {
+	./bin/armbian-config --api module_openhab install
+	systemctl is-active --quiet openhab.service
+}
