--- a/tests/MAN001.conf
+++ b/tests/MAN001.conf
@@ -1,4 +1,9 @@
 ENABLED=true
-PREINSTALL="./bin/armbian-config --api module_cockpit install" in order to satisfy test case
-CONDITION="[ -f /usr/bin/cockpit-bridge ]"
-RELEASE="bookworm:jammy:noble" run on specific or leave empty to run on all
+RELEASE="bookworm:noble" # run on specific or leave empty to run on all
+
+function testcase {
+	./bin/armbian-config --api module_cockpit remove
+	./bin/armbian-config --api module_cockpit install
+	[ -f /usr/bin/cockpit-bridge ]
+}
+
