--- a/tests/MON001.conf
+++ b/tests/MON001.conf
@@ -1,3 +1,10 @@
 ENABLED=true
-RELEASE="bookworm:jammy:noble"
-CONDITION="test=\$(docker container ls -a |  grep uptime-kuma )"
+RELEASE="bookworm:noble"
+
+function testcase {
+	./bin/armbian-config --api module_uptimekuma remove
+	./bin/armbian-config --api module_uptimekuma install
+	./bin/armbian-config --api module_uptimekuma status
+	./bin/armbian-config --api module_uptimekuma remove
+	./bin/armbian-config --api module_uptimekuma status
+}
