--- a/tests/CON005.conf
+++ b/tests/CON005.conf
@@ -1,8 +1,8 @@
 ENABLED=true
 RELEASE="bookworm:noble"
 
-function testcase {
-	./bin/armbian-config --api module_portainer remove
+testcase() {(
+	set -e
+	./bin/armbian-config --api module_portainer install
 	./bin/armbian-config --api module_portainer status
-	echo $?
-}
+)}
