--- a/tests/HAB001.conf
+++ b/tests/HAB001.conf
@@ -1,7 +1,8 @@
 ENABLED=true
 RELEASE="bookworm"
 
-function testcase {
+function testcase {(
+	set -e
 	./bin/armbian-config --api module_openhab install
 	systemctl is-active --quiet openhab.service
-}
+)}
