--- a/tests/HAS001.conf
+++ b/tests/HAS001.conf
@@ -1,6 +1,8 @@
 ENABLED=false
 RELEASE="bookworm"
 
-function testcase {
+testcase() {(
+	set -e
 	./bin/armbian-config --api module_haos install
-}
+	./bin/armbian-config --api module_haos status
+)}
