--- a/tests/MAN001.conf
+++ b/tests/MAN001.conf
@@ -1,9 +1,9 @@
 ENABLED=true
 RELEASE="bookworm:noble" # run on specific or leave empty to run on all
 
-function testcase {
-	./bin/armbian-config --api module_cockpit remove
+testcase() {(
+	set -e
+	./bin/armbian-config --api module_cockpit remove || true
 	./bin/armbian-config --api module_cockpit install
-	[ -f /usr/bin/cockpit-bridge ]
-}
-
+	[[ -f /usr/bin/cockpit-bridge ]]
+)}
