--- a/tests/MON001.conf
+++ b/tests/MON001.conf
@@ -1,10 +1,11 @@
 ENABLED=true
 RELEASE="bookworm:noble"
 
-function testcase {
-	./bin/armbian-config --api module_uptimekuma remove
+testcase() {(
+	set -e
+	./bin/armbian-config --api module_uptimekuma remove || true
 	./bin/armbian-config --api module_uptimekuma install
 	./bin/armbian-config --api module_uptimekuma status
 	./bin/armbian-config --api module_uptimekuma remove
-	./bin/armbian-config --api module_uptimekuma status
-}
+	! ./bin/armbian-config --api module_uptimekuma status
+)}
