--- a/tests/NAV001.conf
+++ b/tests/NAV001.conf
@@ -1,11 +1,10 @@
 ENABLED=true
 RELEASE="bookworm:noble"
 
-function testcase {
+testcase() {(
+	set -e
 	./bin/armbian-config --api module_navidrome remove
 	./bin/armbian-config --api module_navidrome install
 	container=$(docker container ls -a | mawk '/navidrome?( |$)/{print $1}')
-	if [[ -z "${container}" ]]; then
-		exit 1
-	fi
-}
+	[[ -n "$container" ]]
+)}
