--- a/tests/DAT001.conf
+++ b/tests/DAT001.conf
@@ -1,7 +1,8 @@
 ENABLED=false
 
-function testcase {
+testcase() {(
+	set -e
 	./bin/armbian-config --api module_mariadb install
 	./bin/armbian-config --api module_mariadb status
 	docker container ls -a
-}
+)}
