Refactor wrapper for service manipulation
This replaces the `service` function with a series of functions that are
patterned after the pkg_* functions. Additionally, the `service`
function hid the `service` command which is used in several parts of the
code.

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -1634,7 +1634,7 @@
                                 "pkg_install avahi-daemon libnss-mdns",
                                 "cp /usr/share/doc/avahi-daemon/examples/sftp-ssh.service /etc/avahi/services/",
                                 "cp /usr/share/doc/avahi-daemon/examples/ssh.service /etc/avahi/services/",
-                                "service restart avahi-daemon"
+                                "srv_restart avahi-daemon.service"
                             ],
                             "status": "Stable",
                             "author": "@armbian",
