revert test case

--- a/tests/MAN001.conf
+++ b/tests/MAN001.conf
@@ -5,5 +5,5 @@ testcase() {(
 	set -e
 	./bin/armbian-config --api module_cockpit remove || true
 	./bin/armbian-config --api module_cockpit install
-	[[ -f /usr/bin/cockpit-bridge ]] && return 0
+	[[ -f /usr/bin/cockpit-bridge ]]
 )}
