--- a/tests/MAN001.conf
+++ b/tests/MAN001.conf
@@ -3,7 +3,8 @@ RELEASE="bookworm:noble" # run on specific or leave empty to run on all
 
 testcase() {(
 	set -e
-	./bin/armbian-config --api module_cockpit remove || true
+	./bin/armbian-config --api module_cockpit remove
 	./bin/armbian-config --api module_cockpit install
-	[[ -f /usr/bin/cockpit-bridge ]]
+	file="${ls /usr/bin/cockpit-bridge)"
+	[[ -n "$file" ]]
 )}
